Fixed sign in footer position on small screens

--- a/src/WebComponents/SignIn/sign-in.scss
+++ b/src/WebComponents/SignIn/sign-in.scss
@@ -79,8 +79,14 @@
             display: none;
         }
 
-        vi-scroller {
+        #sideHost {
             @include fit();
+        }
+    }
+
+    footer ::content {
+        [sign-in-footer] {
+            width: auto !important;
         }
     }
 }
